tests/fixtures/errors/duplicate_section_name.norm
:root
:data
k
v

:data
k
w
